--- a/src/app/DashBoard/dashboard/dashboard.component.css
+++ b/src/app/DashBoard/dashboard/dashboard.component.css
@@ -10,6 +10,12 @@
     margin-top:1%;
 }
 
+.dashboardbody
+{
+    background-color:rgb(248, 248, 248);
+}
+
+
 .moviestable
 {
     margin-top: 1%;
