--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -2,7 +2,7 @@
   
   <div class="container">
     <div class="row">
-      <div class="col-md-4 pull-left"> <img src="{{MovieData.imgsrc}}" class="rounded" alt="Cinque Terre"></div>
+      <div class="col-md-4 pull-left"> <img src="{{MovieData.ImgSrc}}" class="rounded" alt="Cinque Terre"></div>
       <div class="col-md-4">
       <div><span class="lbl">Movie Id</span> : <span class="data">{{MovieData.MovieId}}</span> </div> <br/> 
       <div><span class="lbl">Movie Name</span> : <span class="data">{{MovieData.MovieName}}</span> </div>  <br/>
